--- a/css/product-info.css
+++ b/css/product-info.css
@@ -52,3 +52,12 @@ fieldset {
 #container p {
     margin-bottom: 15px;
 }
+
+.carousel {
+    text-align: center;
+    padding: 5%;
+    margin: 20px;
+    border: 1px solid #c7c7c7;
+    border-radius: 5px;
+    width: 80%;
+}
